# SourceRegistry

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.console/: log.md
.custodian/: config.yaml
.github/: PULL_REQUEST_TEMPLATE.md
src/source_registry/: __init__.py  cli.py  errors.py  lifecycle.py  patches.py  poll.py  push.py  service.py  verify.py
src/source_registry/contracts/: __init__.py  install_kind.py  patch_record.py  source_entry.py  verification.py
src/source_registry/git/: __init__.py  git_ops.py
src/source_registry/io/: __init__.py  json_io.py  yaml_io.py
src/source_registry/registry/: __init__.py  loader.py  resolver.py
tests/: conftest.py  test_cli.py  test_lifecycle.py  test_patches.py  test_poll.py  test_push.py  test_service.py
tests/contracts/: test_patch_record_contract.py  test_source_entry_contract.py
tests/git/: test_git_ops.py
tests/registry/: test_loader.py  test_resolver.py
